// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsViewCommandBar renders with export button and dialog 1`] = `
"<div className=\\"details-view-command-bar\\">
  <div className=\\"details-view-target-page\\">
    Target page: 
    <StyledLinkBase role=\\"link\\" title=\\"Switch to target page\\" className=\\"insights-link target-page-link\\" onClick={[Function: switchToTargetTabStub]}>
      command-bar-test-tab-title
    </StyledLinkBase>
  </div>
  <div className=\\"details-view-command-buttons\\">
    <ExportControl deps={{...}} reportGenerator={{...}} pageTitle=\\"command-bar-test-tab-title\\" exportResultsType=\\"Assessment\\" scanDate={{...}} htmlGenerator={[Function: bound proxy]} />
    <StartOverDropdown testName=\\"test title\\" test={-1} requirementKey={[undefined]} actionMessageCreator={{...}} rightPanelConfiguration={{...}} />
  </div>
</div>"
`;

exports[`DetailsViewCommandBar renders without export button and dialog 1`] = `
"<div className=\\"details-view-command-bar\\">
  <div className=\\"details-view-target-page\\">
    Target page: 
    <StyledLinkBase role=\\"link\\" title=\\"Switch to target page\\" className=\\"insights-link target-page-link\\" onClick={[Function: switchToTargetTabStub]}>
      command-bar-test-tab-title
    </StyledLinkBase>
  </div>
</div>"
`;
